<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/session_header">

        <EditTextPreference
            app:key="Usuario"
            app:title="@string/user_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="Contraseña"
            app:title="@string/pass_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/datos_header">

        <EditTextPreference
            app:key="Peso"
            app:title="@string/peso_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="Altura"
            app:title="@string/altura_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="IMC"
            app:title="@string/IMC_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sound_header">

        <SwitchPreferenceCompat
            app:key="sonido"
            app:title="@string/sound_title"
            app:enabled="true"/>

        <ListPreference
            app:dependency="sonido"
            app:defaultValue="pump_it"
            app:entries="@array/music_entries"
            app:entryValues="@array/music_values"
            app:key="music"
            app:title="@string/music_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
